--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lete's chat</title>
+	<title>Kwitter</title>
 <link href="https://fonts.googleapis.com/css?family=Yeon+Sung&display=swap" rel="stylesheet"><meta name="viewport" content="width=device-width, initial-scale=1">
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
@@ -14,14 +14,14 @@
 <body>
 <center>
 	<h1 class="header">	
-		Let's chat!	<sup>
-	<img src="m2.png">
+		Let's Chat!	<sup>
+	<img src="logo.jpg">
 	</sup>
 </h1>
 	<div class="col-lg-4 col-md-6 col-sm-6 col-xs-11 login_div">
 	<img src="logo.png" class="logo">
-		<h3 >Talk to freinds and strangers!</h3>
-		<h4 >Join Let's chat today</h4>
+		<h3 Le>Talk to your friends right now</h3>
+		<h4 >Join Let's Chat today</h4>
 		<div class="form-group">
 		  <label >User Name:</label>
 		  <input type="text" id="username" class="form-control" placeholder="Enter a Username">
